force-app/main/default/objects/SSP_Application__c/SSP_Application__c.object-meta.xml
<CustomObject>
    <description>To store SSP Application and Case data</description>
    <label>SSP Application</label>
    <nameField>
        
        <displayFormat>{000000000}</displayFormat>
        
        <label>SSP_Application Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>SSP Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>