force-app/main/default/objects/SSP_Application__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Shows the related Account to an Application</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SSP_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>