force-app/main/default/objects/SSP_Application__c/fields/Application_Change_Start_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Application_Change_Start_Timestamp__c</fullName>
    <description>Application change started timestamp</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Change Start Timestamp</label>
    <type>DateTime</type>
</CustomField>