force-app/main/default/objects/SSP_Application__c/fields/Application_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Application_Changed_By__c</fullName>
    <description>Intake Application updated by</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Changed By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>