force-app/main/default/objects/SSP_Application__c/fields/Application_State__c.field-meta.xml
<CustomField>
    <fullName>Application_State__c</fullName>
    <description>This fields tell whether case application is RAC or Renewal</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Is Case Application RAC Or Renewal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>