force-app/main/default/objects/SSP_Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>Formula field to check if Application is Pending or Submitted</description>
    <formula>IF( ISPICKVAL(Status__c, &apos;UN&apos;),&apos;Unsubmitted&apos;, IF(ISPICKVAL(Status__c, &apos;P&apos;),&apos;Submitted&apos;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to check if Application is Pending or Submitted</inlineHelpText>
    <label>Application Status</label>
    <type>Text</type>
</CustomField>