force-app/main/default/objects/SSP_Application__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <description>Formula Field showing if Application type is Intake or Report a Change</description>
    <formula>IF( RecordType.Name=&apos;Application&apos;,&apos;Intake&apos;,&apos;RAC&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field showing if Application type is Intake or Report a Change</inlineHelpText>
    <label>Application Type</label>
    <type>Text</type>
</CustomField>