force-app/main/default/objects/SSP_Application__c/fields/ApplicationCreationInSSP__c.field-meta.xml
<CustomField>
    <fullName>ApplicationCreationInSSP__c</fullName>
    <description>custom date to track application creation. to be used to calculate 8 days of expiry to show as dashboard notification.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application creation in SSP</label>
    <type>Date</type>
</CustomField>