force-app/main/default/objects/SSP_Application__c/fields/ApplicationEsignFirstName__c.field-meta.xml
<CustomField>
    <fullName>ApplicationEsignFirstName__c</fullName>
    <description>Used to store the FirstName on an Application who has Esigned</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Application Esign FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>