force-app/main/default/objects/SSP_Application__c/fields/ApplicationEsignLastName__c.field-meta.xml
<CustomField>
    <fullName>ApplicationEsignLastName__c</fullName>
    <description>Used to store the LastName on an Application who has Esigned</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Application Esign LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>