force-app/main/default/objects/SSP_Application__c/fields/ApplicationEsignMiddleInitial__c.field-meta.xml
<CustomField>
    <fullName>ApplicationEsignMiddleInitial__c</fullName>
    <description>Used to store the MiddleInitial on an Application who has Esigned</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Application Esign MiddleInitial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>