force-app/main/default/objects/SSP_Application__c/fields/ApplicationEsignSuffixCode__c.field-meta.xml
<CustomField>
    <fullName>ApplicationEsignSuffixCode__c</fullName>
    <description>Used to store the Suffix on an Application who has Esigned</description>
    <label>Application Esign Suffix</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Suffix</valueSetName>
        
        </valueSet>
</CustomField>