force-app/main/default/objects/SSP_Application__c/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <description>This field is used to store Case Number generated from the SSP application</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <externalId>true</externalId>
    <label>ApplicationId</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>