force-app/main/default/objects/SSP_Application__c/fields/ApplicationReceivedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReceivedDateTime__c</fullName>
    <description>Application received date time field for application that is getting submitted</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Received Date Time</label>
    <type>DateTime</type>
</CustomField>