force-app/main/default/objects/SSP_Application__c/fields/ChangeSummaryMode__c.field-meta.xml
<CustomField>
    <fullName>ChangeSummaryMode__c</fullName>
    <label>Change Summary Mode</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>ModifyExistingData</fullName>
                
                
                    <label>Modify Existing Data</label>
                
                </value>
            
                <value>
                
                    <fullName>AddRemoveMember</fullName>
                
                
                    <label>Add / Remove Member</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>