force-app/main/default/objects/SSP_Application__c/fields/CHFS_Exception_ID__c.field-meta.xml
<CustomField>
    <fullName>CHFS_Exception_ID__c</fullName>
    <description>This field is used to store CHFS Exception ID for Service call errors, if any</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CHFS Exception ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>