force-app/main/default/objects/SSP_Application__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows the related Contact to an Application</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SSP_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>