force-app/main/default/objects/SSP_Application__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>This is used in collateral Contact screen to capture the information of a Collateral Contact Name use in verifying household composition</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>