force-app/main/default/objects/SSP_Application__c/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <description>This is used in collateral Contact screen to capture the information of a Collateral Contact Name use in verifying household composition.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>