force-app/main/default/objects/SSP_Application__c/fields/ConvictionVerification__c.field-meta.xml
<CustomField>
    <fullName>ConvictionVerification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to store if conviction is verified.</description>
    <label>Is Conviction verified?</label>
    <type>Checkbox</type>
</CustomField>