force-app/main/default/objects/SSP_Application__c/fields/Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Role__c</fullName>
    <description>created by user&apos;s role from user record</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>created by user&apos;s role from user record</inlineHelpText>
    <label>Created By Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>