force-app/main/default/objects/SSP_Application__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>Formula field for Created Date for report purpose</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field for Created Date for report purpose</inlineHelpText>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>