force-app/main/default/objects/SSP_Application__c/fields/DCCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>DCCaseNumber__c</fullName>
    <description>DC mapping Case number of an Application</description>
    <externalId>true</externalId>
    <label>DCCaseNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>