force-app/main/default/objects/SSP_Application__c/fields/DCSNAPHouseholdExpeditedScreeningId__c.field-meta.xml
<CustomField>
    <fullName>DCSNAPHouseholdExpeditedScreeningId__c</fullName>
    <description>This field is used to indicate a unique SNAP expedited household for an external system</description>
    <externalId>true</externalId>
    <label>DCSNAPHouseholdExpeditedScreeningId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>