force-app/main/default/objects/SSP_Application__c/fields/DeclrtnfAnnuitiesAcceptanceCode__c.field-meta.xml
<CustomField>
    <fullName>DeclrtnfAnnuitiesAcceptanceCode__c</fullName>
    <description>This field is used to store the Declaration of Annuities Acceptance Code</description>
    <label>Declaration of Annuities Acceptance Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>