force-app/main/default/objects/SSP_Application__c/fields/Elapsed_Days__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Days__c</fullName>
    <description>Number of days since last modification was done</description>
    <formula>FLOOR(NOW()  - LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>