force-app/main/default/objects/SSP_Application__c/fields/EnrolledInHealthCareCoverageToggle__c.field-meta.xml
<CustomField>
    <fullName>EnrolledInHealthCareCoverageToggle__c</fullName>
    <description>This field is used to determine if an individual has enrolled in healthcare coverage.</description>
    <label>Enrolled In HealthCare Coverage</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>