force-app/main/default/objects/SSP_Application__c/fields/HasAnnuityToggle__c.field-meta.xml
<CustomField>
    <fullName>HasAnnuityToggle__c</fullName>
    <description>Indicates whether the resource of type - &apos;Annuity&apos; is available</description>
    <label>Has Annuity ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>