force-app/main/default/objects/SSP_Application__c/fields/HasBurialFundToggle__c.field-meta.xml
<CustomField>
    <fullName>HasBurialFundToggle__c</fullName>
    <description>Indicates whether the resource of type - &apos;Burial Funds&apos; is available</description>
    <label>Has Burial Funds ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>