force-app/main/default/objects/SSP_Application__c/fields/HasBurialPlotsToggle__c.field-meta.xml
<CustomField>
    <fullName>HasBurialPlotsToggle__c</fullName>
    <description>Indicates whether the resource of type - &apos;Burial Plots&apos; is available</description>
    <label>Has Burial Plots ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>