force-app/main/default/objects/SSP_Application__c/fields/HasConvictedCrimeToggle__c.field-meta.xml
<CustomField>
    <fullName>HasConvictedCrimeToggle__c</fullName>
    <description>This field is used to store if anyone in household is convicted to crime?</description>
    <label>Has convicted crime</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>