force-app/main/default/objects/SSP_Application__c/fields/HasConvictedOfBuyingSellingToggle__c.field-meta.xml
<CustomField>
    <fullName>HasConvictedOfBuyingSellingToggle__c</fullName>
    <description>This field is used to store if anyone in the household is convicted due to buying / selling / trading of more than 500$</description>
    <label>Convicted Buying / Selling?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>