force-app/main/default/objects/SSP_Application__c/fields/HasConvictedOfTradingDrugsToggle__c.field-meta.xml
<CustomField>
    <fullName>HasConvictedOfTradingDrugsToggle__c</fullName>
    <description>This field is used to store if anyone in the household is convicted of trading drugs</description>
    <label>Convicted of trading drugs?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>