force-app/main/default/objects/SSP_Application__c/fields/HasConvictedOfTradingFirearm__c.field-meta.xml
<CustomField>
    <fullName>HasConvictedOfTradingFirearm__c</fullName>
    <description>This field is used to store if anyone in the household is convicted due to trading firearms</description>
    <label>Has convicted of trading firearm?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>