force-app/main/default/objects/SSP_Application__c/fields/HasEmergencyMedicalCondition__c.field-meta.xml
<CustomField>
    <fullName>HasEmergencyMedicalCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasEmergencyMedicalCondition ?</label>
    <type>Checkbox</type>
</CustomField>