force-app/main/default/objects/SSP_Application__c/fields/HasGivenWrongInformationToggle__c.field-meta.xml
<CustomField>
    <fullName>HasGivenWrongInformationToggle__c</fullName>
    <description>This field is used to store if anyone in the household is convicted due to wrong information</description>
    <label>Convicted wrong informtion ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>