force-app/main/default/objects/SSP_Application__c/fields/HasLifeEstateToggle__c.field-meta.xml
<CustomField>
    <fullName>HasLifeEstateToggle__c</fullName>
    <description>Indicates whether the resource of type - &apos;Life Estate&apos; is available</description>
    <label>Has Life Estate ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>