force-app/main/default/objects/SSP_Application__c/fields/HasLTCAgreementToggle__c.field-meta.xml
<CustomField>
    <fullName>HasLTCAgreementToggle__c</fullName>
    <description>Indicates whether the resource of type - &apos;LTC Agreement&apos; is available</description>
    <label>Has LTC Agreement ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>