force-app/main/default/objects/SSP_Application__c/fields/HasOtherResourceToggle__c.field-meta.xml
<CustomField>
    <fullName>HasOtherResourceToggle__c</fullName>
    <description>Indicates whether the resource of type - &apos;Other Resources&apos; is available</description>
    <label>Has Other Resources ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>