force-app/main/default/objects/SSP_Application__c/fields/HasPartnershipQualifiedLTCPolicyToggle__c.field-meta.xml
<CustomField>
    <fullName>HasPartnershipQualifiedLTCPolicyToggle__c</fullName>
    <description>Indicates whether the resource of type - &apos;Partnership LTC Policy&apos; is available</description>
    <label>Has Partnership LTC Policy ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>