force-app/main/default/objects/SSP_Application__c/fields/HasPendingAccidentSettlementToggle__c.field-meta.xml
<CustomField>
    <fullName>HasPendingAccidentSettlementToggle__c</fullName>
    <description>This field is used to indicate whether the member has pending accident settlement</description>
    <label>Has Pending Accident Settlement</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>