force-app/main/default/objects/SSP_Application__c/fields/HasPromissoryNoteOrLandContractToggle__c.field-meta.xml
<CustomField>
    <fullName>HasPromissoryNoteOrLandContractToggle__c</fullName>
    <description>Indicates whether the resource of type - &apos;Promissory Note or Land Contract&apos; is available</description>
    <label>Has Promissory Note or Land Contract ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>