force-app/main/default/objects/SSP_Application__c/fields/HasShelterExpExceedIncomeResourcesToggle__c.field-meta.xml
<CustomField>
    <fullName>HasShelterExpExceedIncomeResourcesToggle__c</fullName>
    <description>This field is used to identify if shelter expenses exceed monthly gross income for SNAP.</description>
    <label>HasShelterExpExceedIncomeResourcesToggle</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>