force-app/main/default/objects/SSP_Application__c/fields/HasSpecialNeedTrustToggle__c.field-meta.xml
<CustomField>
    <fullName>HasSpecialNeedTrustToggle__c</fullName>
    <description>Indicates whether the resource of type - &apos;Trust&apos; is available</description>
    <label>Has Special Need Trust ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>