force-app/main/default/objects/SSP_Application__c/fields/HouseholdTotalMonthlyCashSavingAmount__c.field-meta.xml
<CustomField>
    <fullName>HouseholdTotalMonthlyCashSavingAmount__c</fullName>
    <description>Used to store household Total Monthly Cash Savings Amount</description>
    <label>HouseholdTotalMonthlyCashSavingAmount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>