force-app/main/default/objects/SSP_Application__c/fields/HouseholdTotalMonthlyGrossIncAmount__c.field-meta.xml
<CustomField>
    <fullName>HouseholdTotalMonthlyGrossIncAmount__c</fullName>
    <label>HouseholdTotalMonthlyGrossIncAmount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>