force-app/main/default/objects/SSP_Application__c/fields/Initial_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Initial_Eligibility_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Eligibility Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>