force-app/main/default/objects/SSP_Application__c/fields/Is_Batch_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Batch_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Batch Processed</label>
    <type>Checkbox</type>
</CustomField>