force-app/main/default/objects/SSP_Application__c/fields/IsAgreeingToLTCResourceTransferConsent__c.field-meta.xml
<CustomField>
    <fullName>IsAgreeingToLTCResourceTransferConsent__c</fullName>
    <description>This is used to determine if individual gave consent to LTC Resource Transfer consent modal</description>
    <label>Is Agreeing to LTC Resrc Trnsfr Consent?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>