force-app/main/default/objects/SSP_Application__c/fields/IsAgreeingToMA34Declaration__c.field-meta.xml
<CustomField>
    <fullName>IsAgreeingToMA34Declaration__c</fullName>
    <description>This is used to determine if individual gave consent to Application statement of understanding modal</description>
    <label>Is Agreeing to MA34 Declraton Annuities?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>