force-app/main/default/objects/SSP_Application__c/fields/IsAgreeingToMedicaidPenalty__c.field-meta.xml
<CustomField>
    <fullName>IsAgreeingToMedicaidPenalty__c</fullName>
    <description>This is used to determine if individual gave consent to Medicaid Penalty warning modal</description>
    <label>Is Agreeing To Medicaid Penalty?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>