force-app/main/default/objects/SSP_Application__c/fields/IsAgreeingToSNAPRightsConsent__c.field-meta.xml
<CustomField>
    <fullName>IsAgreeingToSNAPRightsConsent__c</fullName>
    <description>This is used to determine if individual gave consent to SNAP Rights &amp; Responsibilities modal</description>
    <label>Is Agreeing to SNAP Rights &amp; Respbiltes</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>