force-app/main/default/objects/SSP_Application__c/fields/IsApplicantAgreeToWorkRegister__c.field-meta.xml
<CustomField>
    <fullName>IsApplicantAgreeToWorkRegister__c</fullName>
    <description>This field is used to Indicate whether the Applicant is agreed to work register</description>
    <label>Is Applicant Agree To Work Register ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>