force-app/main/default/objects/SSP_Application__c/fields/IsApplicantAuthorizedRepresentative__c.field-meta.xml
<CustomField>
    <fullName>IsApplicantAuthorizedRepresentative__c</fullName>
    <description>Set to &apos;Y&apos; if any AuthRep is associated with Application/Case submission.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Is Applicant Authorized Representative</label>
    <length>15</length>
    <type>Text</type>
</CustomField>