force-app/main/default/objects/SSP_Application__c/fields/IsApplicationSubmittedEarly__c.field-meta.xml
<CustomField>
    <fullName>IsApplicationSubmittedEarly__c</fullName>
    <description>This field is used to indicate whether the application is submitted early</description>
    <label>IsApplicationSubmittedEarly</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>