force-app/main/default/objects/SSP_Application__c/fields/IsAssetsInExcess1MToggle__c.field-meta.xml
<CustomField>
    <fullName>IsAssetsInExcess1MToggle__c</fullName>
    <description>Indicates whether the household has assets greater than 1 million</description>
    <label>Own Assets Greater than 1 million ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>