force-app/main/default/objects/SSP_Application__c/fields/IsConvictedChemicallyDependentToggle__c.field-meta.xml
<CustomField>
    <fullName>IsConvictedChemicallyDependentToggle__c</fullName>
    <description>This field is used to store if anyone in the household is assessed as chemically dependant</description>
    <label>Been assessed as Chemically dependant ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>