force-app/main/default/objects/SSP_Application__c/fields/IsConvictedOfDrugFelonyToggle__c.field-meta.xml
<CustomField>
    <fullName>IsConvictedOfDrugFelonyToggle__c</fullName>
    <description>This field is used to store if anyone in the household is convicted due to drug felony?</description>
    <label>Is convicted of drug felony?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>