force-app/main/default/objects/SSP_Application__c/fields/IsDestituteFarmOrMigrantHouseholdToggle__c.field-meta.xml
<CustomField>
    <fullName>IsDestituteFarmOrMigrantHouseholdToggle__c</fullName>
    <description>This field is used to identify if anyone in household is migrant or seasonal farmworker for SNAP.</description>
    <label>IsDestituteFarmOrMigrantHousehold?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>