force-app/main/default/objects/SSP_Application__c/fields/IsDMSAnnuitiesBeneficiary__c.field-meta.xml
<CustomField>
    <fullName>IsDMSAnnuitiesBeneficiary__c</fullName>
    <description>This is used to determine if individual have DMS annuities beneficiary.</description>
    <label>Is DMS Annuities Beneficiary</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>