force-app/main/default/objects/SSP_Application__c/fields/IsFleeingFelonToggle__c.field-meta.xml
<CustomField>
    <fullName>IsFleeingFelonToggle__c</fullName>
    <description>This field is used to store if anyone in the household is Fleeing felon</description>
    <label>Is Feeling Felon?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>