force-app/main/default/objects/SSP_Application__c/fields/IsParticipatingCompltdTreatmentToggle__c.field-meta.xml
<CustomField>
    <fullName>IsParticipatingCompltdTreatmentToggle__c</fullName>
    <description>This field is used to store if anyone in the household has completed chemically dependency program.</description>
    <label>Completed Chemical Dependency Program?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>