force-app/main/default/objects/SSP_Application__c/fields/IsPrimaryApplicantAddressModified__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryApplicantAddressModified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to store if the value of HOH Address is changed</description>
    <label>IsPrimaryApplicantAddressModified</label>
    <type>Checkbox</type>
</CustomField>