force-app/main/default/objects/SSP_Application__c/fields/IsRACAddIndividuals__c.field-meta.xml
<CustomField>
    <fullName>IsRACAddIndividuals__c</fullName>
    <description>This field is used to indicate if any new individuals are added as a part of RAC flow</description>
    <label>IsRACAddIndividuals</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>