force-app/main/default/objects/SSP_Application__c/fields/IsReceivingHousingAssistanceToggle__c.field-meta.xml
<CustomField>
    <fullName>IsReceivingHousingAssistanceToggle__c</fullName>
    <description>Indicates whether the household is receiving Housing Assistance</description>
    <label>Is Receiving Housing Assistance ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>