force-app/main/default/objects/SSP_Application__c/fields/IsRegisteredToVote__c.field-meta.xml
<CustomField>
    <fullName>IsRegisteredToVote__c</fullName>
    <description>This field is used to Indicate whether the applicant is registered to vote</description>
    <label>Is Registered to Vote ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>