force-app/main/default/objects/SSP_Application__c/fields/IsRenewalConsent__c.field-meta.xml
<CustomField>
    <fullName>IsRenewalConsent__c</fullName>
    <description>This field is used to indicate whether the Renewal Consent is provided</description>
    <label>Is Renewal Consent ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>