force-app/main/default/objects/SSP_Application__c/fields/IsSignedbyAuthorizedRepresentative__c.field-meta.xml
<CustomField>
    <fullName>IsSignedbyAuthorizedRepresentative__c</fullName>
    <description>This field is used to indicate whether authorised representative has submitted the application</description>
    <label>IsSignedbyAuthorizedRepresentative</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>