force-app/main/default/objects/SSP_Application__c/fields/LastSummaryLoadDate__c.field-meta.xml
<CustomField>
    <fullName>LastSummaryLoadDate__c</fullName>
    <description>Date when summary was last loaded.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LastSummaryLoadDate</label>
    <type>Date</type>
</CustomField>